data/derived/comb/progs/unify/prog4187.ml.out
Characters 94-124:
  |(c, h::t) -> (bigAdd [c] x, mulByDigit h x)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
